# trainee

./: .gitmodules
algo/binary_search/: CMakeLists.txt  binary_search.c
algo/deykstra/: CMakeLists.txt  deykstra.cpp
algo/partition/: CMakeLists.txt  conanfile.txt  partition.cpp
algo/prefix_tree/: CMakeLists.txt  main.cpp  prefix_tree.cpp  prefix_tree.hpp
algo/ranges/: CMakeLists.txt  ranges.cpp
algo/sorting/: CMakeLists.txt  conanfile.txt  insertion_sort_one_by_one.cpp  sort.cpp
algo/sorting/bubble_sort/: CMakeLists.txt  bubble_sort.cpp
algo/sorting/heap_sort/: CMakeLists.txt  heap_sort.cpp
algo/sorting/insertion_sort/: CMakeLists.txt  insertion_sort.cpp
algo/sorting/quick_sort/: CMakeLists.txt  quick_sort.cpp
algo/sorting/quick_sort_r/: CMakeLists.txt  quick_sort_r.cpp
algo/sorting/selection_sort/: CMakeLists.txt  selection_sort.cpp
aligned_smart_ptr/: CMakeLists.txt  aligned_smart_ptr.cpp
aligned_storage/: CMakeLists.txt  aligned_storage.cpp  conanfile.txt
boost/adaptors/: indirect.cpp  map_keys_values.cpp
boost/algo/: cxx11.cpp  sort.cpp  sort_bind_for_each.cpp
boost/any/: any.cpp
boost/asio/: asio.cpp  asio2.cpp  asio3.cpp  io_service.cpp  tcp.cpp  timer.cpp  timer2.cpp
boost/child/process/: CMakeLists.txt
boost/child/process/src/: CMakeLists.txt  main.cpp  program.cpp
boost/chrono/: chrono_1.cpp
boost/containers/: bimap.cpp  bimap_2.cpp  circular_buffer.cpp  intrusive_list.cpp  intrusive_list_set.cpp  multiindex.cpp  ptr_vector.cpp  vector.cpp
boost/dll/: library.cpp  library.hpp  main.cpp
boost/filesystem/: boost_filesystem.cpp
boost/format/: format.cpp
boost/functional/: func_1.cpp  func_2.cpp  func_3.cpp
boost/generic/: enable_if.cpp  gen_1.cpp  typeid.cpp  uuid.cpp
boost/graph/: main_graph1.cpp
boost/inderect_iterator/: inderect_iterator.cpp
boost/integer/: integer.cpp
boost/lockfree/: queue.cpp
boost/my_algo/: algo.hpp  avl_tree.cpp  binary_search.cpp  bubble_sort.cpp  counting_sort.cpp  currying.cpp  inorder_traversal.cpp  insertion_sort.cpp  main.cpp  quick_sort.cpp  red_black_tree.cpp  search2.cpp  search3.cpp  selection_sort.cpp  solution.cpp  sorting_perfomance.cpp  sum3.cpp  test.cpp
boost/my_algo/avl_tree/: avl_tree.cpp  conanfile.txt
boost/my_algo/binary_search/: binary_search.cpp
boost/my_algo/insertion_sort/: insertion_sort.cpp
boost/property_tree/: myxml.xml  xml_parser.cpp
boost/regex/: regex.cpp  regex2.cpp
boost/scope/: scope_1.cpp
boost/smart_ptr/: smart_1.cpp
boost/std_algo/: end_of_scope.cpp  equal.cpp  insertion_sort.cpp  lowerupperbound.cpp  swap_ranges.cpp
boost/streams/: stream1.cpp  stream2.cpp  stream3.cpp
boost/thread/: thread_2.cpp
boost/timer/: timer_1.cpp  timer_2.cpp
boost/visitor/: visitor.cpp
cache/lfu/: CMakeLists.txt  lfu.hpp  ut.cpp
cache/lru/: CMakeLists.txt  conanfile.txt  flat_lru.hpp  generic_lru.hpp  lru.cpp  ut.cpp
clang/complete/: .gitignore  CMakeLists.txt  clang_complete.cpp  project.cpp
cpp20/hello_world/: CMakeLists.txt  hello_world.cpp
cpp20/semaphore/: CMakeLists.txt
cpp20/unique_ptr/: CMakeLists.txt  conanfile.txt  unique_ptr_cpp20.cpp
cpp20semaphore/: CMakeLists.txt  cpp20binarysemaphore.cpp  cpp20countingsemaphore.cpp
cppmodule/: .gitignore  CMakeLists.txt  Makefile.clang_approach  build  clean  configure  cppmodule.cpp  foo.cpp
crcbench/: CMakeLists.txt  bench.cpp  bench1.cpp  bench2.cpp  conanfile.txt  crc32c.cpp  crc32c.h
daemon/: CMakeLists.txt  daemon.cpp
dlopen/: CMakeLists.txt  dlopen.c  foo.1.cpp  foo.2.cpp  foo.h
endian/: CMakeLists.txt  conanfile.txt  endian.cpp
intrusive/: CMakeLists.txt  conanfile.txt  intrusive.cpp
lockless/: CMakeLists.txt  interprocessspmcqueue.cpp
lockless/spmcqueue/: CMakeLists.txt  conanfile.txt  interprocessspmcqueue.cpp  spmcqueue.hpp
lockless/spscqueue/: CMakeLists.txt  interprocessspscqueue.cpp  spscqueue.hpp
pipeline_model/: CMakeLists.txt  conanfile.txt  pipeline_model.cpp
posix/semaphore/: CMakeLists.txt  interprocessbinarysemaphore.cpp  interprocesscountingsemaphore.cpp  interthreadbinarysemaphore.cpp
posix/shmem/: client.cpp  server.cpp
pybind/: CMakeLists.txt  conanfile.txt  pybind_test.cpp
python/algo/: deykstra.py  qsort.py
shared_memory/: CMakeLists.txt  main.cpp
shmem/: CMakeLists.txt  common.hpp  readme.txt
tls/: CMakeLists.txt  client.cpp  conanfile.txt  crtkeygen.py  server.cnf  server.cpp
